@@ -22,7 +22,8 @@ class WXDLLEXPORT wxMenu;
 class WXDLLEXPORT wxTaskBarIcon : public wxTaskBarIconBase
 {
 public:
-	//type of taskbar item to create (currently only DOCK is implemented)
+	//type of taskbar item to create 
+    //TODO:  currently only DOCK is implemented
 	enum wxTaskBarIconType
 	{
 		DOCK,
@@ -33,16 +34,24 @@ public:
     wxTaskBarIcon(const wxTaskBarIconType& nType = DOCK);
     virtual ~wxTaskBarIcon();
 
-    // Operations:
+    //TODO: not tested extensively
     bool SetIcon(const wxIcon& icon, const wxString& tooltip = wxEmptyString);
     bool RemoveIcon();
+    //TODO: end not tested extensively
+    
+    //pops up the menu
     bool PopupMenu(wxMenu *menu);
 
+    //internal functions - don't call
+	void SetInternalEvent(void* pEvent);	
+    wxMenu* GetCurrentMenu();
+
 protected:
-    wxTaskBarIconType m_nType;
-	
+	wxTaskBarIconType m_nType;
+	void* m_pEvent;
+    wxMenu* m_pMenu;
+    	
     DECLARE_DYNAMIC_CLASS(wxTaskBarIcon)
 };
-
 #endif
     // _TASKBAR_H_
